@startuml Controller-Klasse

interface Promise<T>

package @nestjs/common {
  annotation Controller
  annotation UseGuards
  annotation UseInterceptors
  annotation Post
  annotation Put
  annotation Delete
  annotation Req
  annotation Res
  annotation Param
  annotation Body
  annotation Headers

  UseInterceptors .[hidden].> Post
  UseInterceptors .[hidden].> Put
  UseInterceptors .[hidden].> Delete

  Post .[hidden].> Req
  Post .[hidden].> Res
  Post .[hidden].> Param
  Post .[hidden].> Body
  Post .[hidden].> Headers
}

package nest-keycloak-connect {
  class AuthGuard
  annotation Roles
}

package express {
  class Request
  class Response

  Response .right[hidden].> Controller
}

package auto {
  package service {
    class AutoWriteService << control >>
  }

  package rest #DDDDDD {
    class AutoDtoOhneRef << entity >>
    class AutoDTO << entity >>
    AutoDtoOhneRef <|-- AutoDTO

    class AutoWriteController << control >> << @Controller() >> << @UseGuards() >> << @UseInterceptors() >> {
      + @Post() @Roles() async post(@Body() auto: AutoDTO, @Req() req: Request,  @Res() res: Response): Promise<Response>
      + @Put() @Roles() async put(@Body() auto: AutoDtoOhneRef, @Param() id: number, @Headers() version: string, @Res() res: Response): Promise<Response>
      + @Delete() @Roles() async delete(@Param() id: number, @Res() res: Response): Promise<Response>
    }

    AutoWriteController o--> "1" AutoWriteService : service

    AutoWriteController ..> AutoDTO
    AutoWriteController ..> AutoDtoOhneRef

    AutoWriteController .up.> Controller

    AutoWriteController .up.> AuthGuard
    AutoWriteController .up.> Roles

    AutoWriteController .up.> Request
    AutoWriteController ..> Response

    AutoWriteController .up.> Promise

    AuthGuard .left[hidden].> Res
    Roles .left[hidden].> Res
    AutoDTO .down[hidden].> AutoWriteService
    AutoWriteService .right[hidden].> Request
    AutoWriteService .down[hidden].> Promise
    AuthGuard .left[hidden].> Promise
    AutoWriteService .down[hidden].> Request
  }
}

hide empty members

@enduml
